TAG:  qcreports_db-17-0-12, qcreports_db-17-0-13
DATE: 06/11/2002
STAFF: lec
RELEASE: A
CHANGES:
a) TR 3775; MRK_GOAllele.py

TAG:  qcreports_db-17-0-11
DATE: 06/10/2002
STAFF: lec
RELEASE: A
CHANGES:
a) TR 3763; MRK_GOGold.py
b) TR 3769; PRB_StrainTrans.sql

TAG:  qcreports_db-17-0-10
DATE: 05/28/2002
STAFF: lec
RELEASE: A
CHANGES:
a) TR 3731; GO_EvidenceCodeStats.sql

TAG: 
DATE: 05/21/2002
STAFF: lec
RELEASE: A
CHANGES:
a) TR 3701; fantom2.py

TAG: qcreports_db-17-0-8, qcreports_db-17-0-9
DATE: 05/03/2002
STAFF: lec
RELEASE: A
CHANGES:
a) added goStats.sh/TR 2212
b) put header and trailer into report

TAG: qcreports_db-17-0-7
DATE: 05/02/2002
STAFF: lec
RELEASE: A
CHANGES:
a) remove fantom.mgi after copying to FTP directory

TAG: qcreports_db-17-0-5, qcreports_db-17-0-6
DATE: 04/30/2002
STAFF: lec
RELEASE: A
CHANGES:
a) TR 3638/3639 - fantom/fantom2.py
b) added RIKENFTPDIR
c) changed HUGO values

TAG: qcreports_db-17-0-4
DATE: 04/29/2002
STAFF: lec
RELEASE: A
CHANGES:
a) TR 3638/3639 - fantom/fantom2.py

TAG: qcreports_db-17-0-3
DATE: 04/23/2002
STAFF: lec
RELEASE: A
CHANGES:
a) TR 3614 - GXD_AntibodyMarker.sql
b) TR 3615 - GXD_NotInCache.sql
c) TR 3616 - GXD_SpecNoAge.sql
d) TR 3617 - GXD_SpecTheiler.sql

TAG: qcreports_db-17-0-2
DATE: 04/03/2002
STAFF: lec
RELEASE: A
CHANGES:
a) TR 3531

TAG: qcreports_db-17-0-1
DATE: 03/27/2002
STAFF: lec
RELEASE: A
CHANGES:
a) TR3400

TAG: qcreports_db-17-0-0
DATE: 03/26/2002
STAFF: lec
RELEASE: A
CHANGES:
a) TR 3398, 3400, 3401, 3403 (GXD)
b) TR 3466 (Strains)

TAG: qcreports_db-16-0-6
DATE: 03/01/2002
STAFF: lec
RELEASE: A
CHANGES:
a) MGI 2.8 (PRB_StrainStd.sql, PRB_StrainNonStd.sql)

TAG: qcreports_db-16-0-5
DATE: 02/26/2002
STAFF: lec
RELEASE: A
CHANGES:
a) TR 3386
b) MGI 2.8

TAG: qcreports_db-16-0-4
DATE: 02/07/2002
STAFF: lec
RELEASE: A
CHANGES:
a) added PRB_Strain.rpt to qcr.html

TAG: qcreports_db-16-0-2, qcreports_db-16-0-3
DATE: 01/31/2002
STAFF: lec
RELEASE: A
CHANGES:
a) added strainChanges.sh