@@ -65,9 +65,10 @@ be used at times to test reports for <I>future</I> public consumption.)
 <A NAME="alleles"><B>Alleles</B> </A>
 <OL>
 <LI><A HREF="/usrlocalmgi/qcreports_db/output/MRK_Alleles.sql.rpt">Allele Anomalies</A>
-<LI><A HREF="/usrlocalmgi/qcreports_db/output/ALL_NomenText.sql.rpt">Symbols which have undergone withdrawals and appear in Allele Molecular Notes</a>
-<LI><A HREF="/usrlocalmgi/qcreports_db/output/ALL_ESCellStrain.sql.rpt">ES Cell Line Strains Modified Last Month - Sorted by Modification Date</a>
-<LI><A HREF="/usrlocalmgi/qcreports_db/output/ALL_ReservedNot23000.sql.rpt">Reserved Alleles w/ Primary Reference != J:23000</a>
+<LI><A HREF="/usrlocalmgi/qcreports_db/output/ALL_NomenText.sql.rpt">Symbols which have undergone withdrawals and appear in Allele Molecular Notes</A>
+<LI><A HREF="/usrlocalmgi/qcreports_db/output/ALL_ESCellStrain.sql.rpt">ES Cell Line Strains Modified Last Month - Sorted by Modification Date</A>
+<LI><A HREF="/usrlocalmgi/qcreports_db/output/ALL_ReservedNot23000.sql.rpt">Reserved Alleles w/ Primary Reference != J:23000</A>
+<LI><A HREF="/usrlocalmgi/qcreports_db/output/MRK_WithAllele_MLC.sql.rpt">Allele Withdrawals in Last 2 Months where either Old or New Gene has MLC record</A>
 </OL>
 
 <A NAME="mlc"><B>MLC</B></A>
