@@ -1,3 +1,10 @@
+TAG:  qcreports_db-17-0-14
+DATE: 06/14/2002
+STAFF: lec
+RELEASE: A
+CHANGES:
+a) TR 3785; MRK_WithAllele_MLC.sql
+
 TAG:  qcreports_db-17-0-12, qcreports_db-17-0-13
 DATE: 06/11/2002
 STAFF: lec
